Sound effects and gem programming
Have introduced jump, land, gem_grabbing, BGM, and character selection
sounds. Gems have initial programming, need better sequence for
displaying how MANY of each have been obtained.

--- a/Layouts/Credits.xml
+++ b/Layouts/Credits.xml
@@ -270,6 +270,60 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
+                <instance type="Text" uid="40">
+                    <properties>
+                        <text>Music</text>
+                        <initial-visibility>Visible</initial-visibility>
+                        <font>Bauhaus 93,-24,400,0</font>
+                        <color>0,0,0</color>
+                        <horizontal-alignment>Left</horizontal-alignment>
+                        <vertical-alignment>Top</vertical-alignment>
+                        <hotspot>Top-left</hotspot>
+                        <wrapping>Word</wrapping>
+                        <line-height>0</line-height>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>299.404754639</x>
+                        <y>355.742004395</y>
+                        <z>0</z>
+                        <width>74.279327393</width>
+                        <height>29</height>
+                        <depth>0</depth>
+                        <hotspotX>0</hotspotX>
+                        <hotspotY>0</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
+                <instance type="Text" uid="41">
+                    <properties>
+                        <text>Aleeious</text>
+                        <initial-visibility>Visible</initial-visibility>
+                        <font>Bauhaus 93,-16,400,0</font>
+                        <color>0,0,0</color>
+                        <horizontal-alignment>Left</horizontal-alignment>
+                        <vertical-alignment>Top</vertical-alignment>
+                        <hotspot>Top-left</hotspot>
+                        <wrapping>Word</wrapping>
+                        <line-height>0</line-height>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>300.422576904</x>
+                        <y>386.89465332</y>
+                        <z>0</z>
+                        <width>63.420562744</width>
+                        <height>23</height>
+                        <depth>0</depth>
+                        <hotspotX>0</hotspotX>
+                        <hotspotY>0</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
             </instances>
             <effects />
         </layer>
