--- a/Layouts/room-13 (start) (Jplay).xml
+++ b/Layouts/room-13 (start) (Jplay).xml
@@ -57,8 +57,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>213</x>
-                        <y>233</y>
+                        <x>149</x>
+                        <y>235</y>
                         <z>0</z>
                         <width>66</width>
                         <height>92</height>
@@ -171,7 +171,7 @@
                         <height>7</height>
                         <max-width>26</max-width>
                         <max-height>15</max-height>
-                        <data>31,-1,-1,-1,-1,-1,48,-1,-1,-1,-1,-1,-1,-1,-1,31,-1,-1,-1,-1,-1,49,-1,-1,-1,-1,-1,-1,-1,-1,31,-1,-1,-1,30,-1,50,-1,-1,-1,-1,-1,-1,-1,-1,31,-1,-1,-1,32,-1,51,-1,-1,-1,-1,-1,-1,-1,-1,31,-1,-1,-1,-1,-1,48,-1,-1,-1,-1,-1,-1,-1,-1,31,-1,-1,62,74,62,74,-1,-1,-1,-1,-1,-1,-1,-1,31,-1,-1,63,75,63,75,-1,-1,-1,-1,-1,-1,-1,-1,31,-1,-1,-1,-1,-1,51,-1,-1,-1,-1,-1,-1,-1,-1,31,-1,-1,-1,-1,-1,48,-1,-1,-1,-1,-1,-1,-1,-1,31,-1,-1,-1,30,-1,49,-1,-1,-1,-1,-1,-1,-1,-1,31,-1,-1,-1,32,-1,50,-1,-1,-1,-1,-1,-1,-1,-1,31,-1,-1,-1,-1,-1,51,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1</data>
+                        <data>31,-1,-1,-1,-1,-1,48,-1,-1,-1,-1,-1,-1,-1,-1,31,-1,-1,-1,30,-1,49,-1,-1,-1,-1,-1,-1,-1,-1,31,-1,-1,-1,32,-1,50,-1,-1,-1,-1,-1,-1,-1,-1,31,-1,-1,-1,-1,-1,51,-1,-1,-1,-1,-1,-1,-1,-1,31,-1,-1,-1,-1,-1,48,-1,-1,-1,-1,-1,-1,-1,-1,31,-1,-1,62,74,62,74,-1,-1,-1,-1,-1,-1,-1,-1,31,-1,-1,63,75,63,75,-1,-1,-1,-1,-1,-1,-1,-1,31,-1,-1,-1,-1,-1,51,-1,-1,-1,-1,-1,-1,-1,-1,31,-1,-1,-1,-1,-1,48,-1,-1,-1,-1,-1,-1,-1,-1,31,-1,-1,-1,30,-1,49,-1,-1,-1,-1,-1,-1,-1,-1,31,-1,-1,-1,32,-1,50,-1,-1,-1,-1,-1,-1,-1,-1,31,-1,-1,-1,-1,-1,51,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1</data>
                     </tilemap-data>
                 </instance>
             </instances>
@@ -205,14 +205,41 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>704</x>
-                        <y>154</y>
+                        <x>757</x>
+                        <y>163</y>
                         <z>0</z>
                         <width>53</width>
                         <height>45</height>
                         <depth>0</depth>
                         <hotspotX>0.509433985</hotspotX>
                         <hotspotY>0.51111114</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
+                <instance type="Text" uid="53">
+                    <properties>
+                        <text>Tag ROM30 to change characters!!</text>
+                        <initial-visibility>Visible</initial-visibility>
+                        <font>Arial,-16</font>
+                        <color>0,0,0</color>
+                        <horizontal-alignment>Left</horizontal-alignment>
+                        <vertical-alignment>Top</vertical-alignment>
+                        <hotspot>Center</hotspot>
+                        <wrapping>Word</wrapping>
+                        <line-height>0</line-height>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>420</x>
+                        <y>53</y>
+                        <z>0</z>
+                        <width>254</width>
+                        <height>22</height>
+                        <depth>0</depth>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.5</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
